force-app/main/default/objects/CashACBal__c/CashACBal__c.object-meta.xml
<CustomObject>
    <label>Cash+A/C Bal</label>
    <nameField>
        <displayFormat>CSAC-{000000}</displayFormat>
        <label>CASH+A/C BAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash+A/C Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>