force-app/main/default/objects/CashACBal__c/fields/ACBalanceCashAccountID__c.field-meta.xml
<CustomField>
    <fullName>ACBalanceCashAccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A/C BAL CASH ACCOUNT ID</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>CASH+A/C BAL</relationshipLabel>
    <relationshipName>CashACBal</relationshipName>
    <type>Lookup</type>
</CustomField>