force-app/main/default/objects/CashACBal__c/fields/ActualAmountOfCashInLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountOfCashInLocalFormula__c</fullName>
    <formula>CashID__r.ActualAmountCollected__c</formula>
    <label>ACTUAL AMOUNT OF CASH-IN(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>