force-app/main/default/objects/CashACBal__c/fields/ActualAmountOfCashInUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountOfCashInUSDACBal__c</fullName>
    <label>ACTUAL AMOUNT OF CASH-IN(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>