force-app/main/default/objects/CashACBal__c/fields/ActualAmountOfCashOutLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountOfCashOutLocalFormula__c</fullName>
    <formula>CashID__r.ACTUAL_PAID_TO_VENDOR__c</formula>
    <label>ACTUAL AMOUNT OF CASH-OUT(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>