force-app/main/default/objects/CashACBal__c/fields/ActualAmountOfCashOutUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountOfCashOutUSDACBal__c</fullName>
    <label>ACTUAL AMOUNT OF CASH-OUT(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>