force-app/main/default/objects/CashACBal__c/fields/ActualAmountOfCashOutUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountOfCashOutUSDFormula__c</fullName>
    <formula>CashID__r.ActualAmountPaidUSD__c</formula>
    <label>ACTUAL AMOUNT OF CASH-OUT(USD)-FORMULA</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>